--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><img src="images/logo.png" alt="logo" /></div>
+            <div id="clock" class="clock"></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Alexandre Pires</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Download CV</a>
+                <a href="https://drive.google.com/file/d/17-sFLIaNENAu0jWsKbq6LEmhki4lXUQJ/view?usp=share_link" target="_blank" onclick="yourfunction()">Download CV</a> 
             </div>
         </div>
     </section>
@@ -57,12 +57,13 @@
                 </div>
                 <div class="column right">
                     <div class="text">My name is Alex and I'm a: <span class="typing-2"></span></div>
-                    <p>Hello :) As stated above, my name is <b>Alexandre Eduardo Lagoa Pires</b>, I'm 32 years old and I live in <b>Porto, Portugal.</b> Since I was young I've always felt interested in computers and programming. This is my personal Website. <b>Hope you like it</b>!</p>
+                    <br>
+                    <p>Hello :) As stated above, my name is <b>Alexandre Eduardo Lagoa Pires</b>, I'm 33 years old and I live in <b>Porto, Portugal.</b> Since I was young I've always felt interested in computers and programming. This is my personal Website. <b>Hope you like it</b>!</p>
                     <div class="social-container">
                         <ul class="social-icons">
-                            <a href="https://www.instagram.com/alexandre.lpires/"><i class="fa fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/alexandre-pires-a6ba131a1/"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://github.com/aelpires"><i class="fa fa-github"></i></a>
+                            <a href="https://www.instagram.com/alexandre.lpires/" target="_blank" onclick="yourfunction()"><i class="fa fa-instagram"></i></a> 
+                            <a href="https://www.linkedin.com/in/alexandre-pires-a6ba131a1/" target="_blank" onclick="yourfunction()"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://github.com/aelpires" target="_blank" onclick="yourfunction()"><i class="fa fa-github"></i></a> 
                         </ul>
                 </div>
             </div>
@@ -73,14 +74,14 @@
     <section class="services" id="services">
         <div class="max-width">
             <h2 class="title">My services</h2>
-            <div class="serv-content">
+            <div class="serv-content">                
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Front-end Developer</div>
                         <p>UX Design/Html/Css/Responsive Web Development/JavaScript/React/ Git/NodeJS</p>
                     </div>
-                </div>
+                </div></a> 
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
@@ -151,11 +152,25 @@
         </div>
     </section>
 
-    <!-- teams section start -->
+    <!-- My Projects section start -->
     <section class="projects" id="projects">
         <div class="max-width">
             <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="images/weather app.jpg" alt="">
+                        <div class="text">Weather App</div>
+                        <p>A usefull <b>JavaScript App</b> with a free API from https://openweathermap.org, to check the weather at any place on earth.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/notes.jpg" alt="">
+                        <div class="text">Notes App</div>
+                        <p>A usefull <b>JavaScript App</b> that allows you to take notes and delete them anytime you want.</p>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/roullete-Edit.jpg" alt="">
